force-app/main/default/objects/Month_Duty__c/Month_Duty__c.object-meta.xml
<CustomObject>
    <label>Дежурство на месяц</label>
    <nameField>
        <label>Имя записи</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Дежурства на месяц</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>