force-app/main/default/objects/Month_Duty__c/fields/Dormitory__c.field-meta.xml
<CustomField>
    <fullName>Dormitory__c</fullName>
    <label>Общежитие</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Дежурства на месяц</relationshipLabel>
    <relationshipName>Month_Duties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>