force-app/main/default/objects/Month_Duty__c/fields/Duty_Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Duty_Month_Year__c</fullName>
    <inlineHelpText>Выберите любой день из месяца, для которого вы создаёте расписание дежурств</inlineHelpText>
    <label>Месяц, год дежурства</label>
    <type>Date</type>
</CustomField>