force-app/main/default/objects/Month_Duty__c/fields/FX_Duty_Month__c.field-meta.xml
<CustomField>
    <fullName>FX_Duty_Month__c</fullName>
    <formula>CASE(MONTH(Duty_Month_Year__c), 
 1, &quot;Январь&quot;, 
 2, &quot;Февраль&quot;, 
 3, &quot;Март&quot;,  
 4, &quot;Апрель&quot;, 
 5, &quot;Май&quot;,  
 6, &quot;Июнь&quot;, 
 7, &quot;Июль&quot;, 
 8, &quot;Август&quot;, 
 9, &quot;Сентябрь&quot;, 
 10, &quot;Октябрь&quot;, 
 11, &quot;Ноябрь&quot;, 
 12, &quot;Декабрь&quot;, 
 &quot;Неверное значение&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Месяц дежурства</label>
    <type>Text</type>
</CustomField>