force-app/main/default/objects/Month_Duty__c/fields/FX_Duty_Year__c.field-meta.xml
<CustomField>
    <fullName>FX_Duty_Year__c</fullName>
    <formula>YEAR(Duty_Month_Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Год дежурства</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>