force-app/main/default/objects/Month_Duty__c/fields/Is_Registration_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Registration_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Запись разрешена</label>
    <type>Checkbox</type>
</CustomField>